--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   </head>
   <body>
-    <img src="/images/b2.jpg" alt="banner" class="banner" />
+    <img src="images/b2.jpg" alt="banner" class="banner" />
     <nav>
-      <img src="/images/alogo.jpg" alt="" />
+      <img src="images/alogo.jpg" alt="" />
       <ul>
         <li>ABOUT</li>
         <li>IMAGES</li>
@@ -108,41 +108,41 @@
 
       <div class="images">
         <div class="big">
-          <img src="/images/1.jpg" alt="" />
+          <img src="images/1.jpg" alt="" />
         </div>
         <div class="">
-          <img src="/images/3.jpg" alt="" />
+          <img src="images/3.jpg" alt="" />
         </div>
         <div class="hight">
-          <img src="/images/2.jpg" alt="" />
+          <img src="images/2.jpg" alt="" />
         </div>
         <div class="wild">
-          <img src="/images/4.jpg" alt="" />
+          <img src="images/4.jpg" alt="" />
         </div>
         <div class="">
-          <img src="/images/7.jpg" alt="" />
+          <img src="images/7.jpg" alt="" />
         </div>
         <div class="wild">
-          <img src="/images/6.jpg" alt="" />
+          <img src="images/6.jpg" alt="" />
         </div>
 
         <div class="wild">
-          <img src="/images/5.jpg" alt="" />
+          <img src="images/5.jpg" alt="" />
         </div>
         <div class="hight">
-          <img src="/images/8.jpg" alt="" />
+          <img src="images/8.jpg" alt="" />
         </div>
         <div class="">
-          <img src="/images/9.jpg" alt="" />
+          <img src="images/9.jpg" alt="" />
         </div>
         <div class="big">
-          <img src="/images/12.jpg" alt="" />
+          <img src="images/12.jpg" alt="" />
         </div>
         <div class="wild">
-          <img src="/images/10.jpg" alt="" />
+          <img src="images/10.jpg" alt="" />
         </div>
         <div class="">
-          <img src="/images/11.jpg" alt="" />
+          <img src="images/11.jpg" alt="" />
         </div>
 
         <!-- <div class="two-two">
