--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   </head>
   <body>
-    <img src="/images/b2.jpg" alt="banner" class="banner" id="banner" />
+    <img src="images/b2.jpg" alt="banner" class="banner" id="banner" />
     <nav>
-      <a href="#banner"><img src="/images/alogo.jpg" alt=""  /></a>
+      <a href="#banner"><img src="images/alogo.jpg" alt=""  /></a>
       <ul>
         <li><a href="#ABOUT">ABOUT</a></li>
         <li><a href="#IMAGES">IMAGES</a></li>
