--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16057.034476774073!2d-8.026871294942154!3d31.630374701285074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd9f5f7c22b46471%3A0xdad8be7a3eb168d0!2sPalais%20des%20Congr%C3%A8s%20Marrakech!5e0!3m2!1sen!2sma!4v1699542401431!5m2!1sen!2sma"
           width="500"
-          height="500"
+          height="1000"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
@@ -278,8 +278,8 @@
         <h3 class="loc">Jemaa el-Fnaa</h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15993.205539446632!2d-8.006433391026937!3d31.62580460345394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd9f5fb03a174747%3A0xc66031c086b064fe!2sJemaa%20el-Fnaa%20Square!5e0!3m2!1sen!2sma!4v1699542655202!5m2!1sen!2sma"
-          width="600"
-          height="450"
+          width="500"
+          height="1000"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
@@ -291,8 +291,7 @@
             Description : La place Jemaa el-Fnaa est l'un des lieux les plus
             emblématiques de Marrakech. Pendant le festival, elle accueille des
             projections en plein air, des événements publics et des
-            rassemblements spéciaux, créant une ambiance festive et animée dans
-            le cœur de la ville.
+            rassemblements spéciaux, créant une ambiance festive.
           </li>
         </ul>
             </div>
@@ -316,10 +315,24 @@
       <div class="contact-me">
         <h3>Contact Me</h2>
           <div class="clink">
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-whatsapp"></i>
-        <i class="fa-regular fa-paper-plane"></i>
+<a href="https://github.com/B00ZI" target="_blank">
+  <i class="fa-brands fa-github"></i>
+</a>
+<a href="https://github.com/B00ZI" target="_blank">
+  <i class="fa-brands fa-linkedin-in"></i>
+
+</a>
+<a href="https://wa.me/+212631125909" target="_blank">
+  <i class="fa-brands fa-whatsapp"></i>
+
+</a>
+<a  href="https://mail.google.com/mail/?view=cm&fs=1&to=iraamaneyahya@gmail.com" target="_blank">
+  <i class="fa-regular fa-paper-plane"></i>
+
+</a>
+
+
+  
           </div>
       </div>
     </footer>
